Moved start of issue container to avoid form being erased.  Added style to shrink text on mobile.

--- a/style.css
+++ b/style.css
@@ -10,3 +10,13 @@ p.navbar-brand{
 .clickable {
   cursor: pointer;
   }
+
+  @media only screen and (max-width: 600px) {
+    h4.issue-title {
+      font-size: 1.2rem;
+    }
+
+    h5.issue-description{
+      font-size: 1rem;
+    }
+  }
